--- a/cv-site/cv-print.html
+++ b/cv-site/cv-print.html
@@ -573,7 +573,7 @@
         <!-- Header -->
         <div class="header">
             <div class="profile-block">
-                <img src="https://media.licdn.com/dms/image/v2/D4D03AQHt8uDrQks9pg/profile-displayphoto-shrink_800_800/B4DZWTnI7MHkAc-/0/1741938268535?e=1757548800&v=beta&t=qjwFbe1291i1R78UkfM5tUlBHxBVfaW8WBIlz03ADM8" alt="Youssef Hassan Ali" class="profile-img">
+                <img src="https://media.licdn.com/dms/image/v2/D4D03AQHt8uDrQks9pg/profile-displayphoto-shrink_400_400/B4DZWTnI7MHkAg-/0/1741938268535?e=1760572800&v=beta&t=NR67lY1gDq2V6D7qyfqFHmmOmE_hDlbdHkafLjtJL3I" alt="Youssef Hassan Ali" class="profile-img">
                 <div class="birth-date">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
                         <path d="M7 2a1 1 0 0 1 1 1v1h8V3a1 1 0 1 1 2 0v1h1a2 2 0 0 1 2 2v13a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1V3a1 1 0 0 1 1-1zm12 7H5v10h14V9zM7 11h4v4H7v-4z"/>
@@ -800,6 +800,27 @@
                          </div>
                      </div>
                  </div>
+                                <div class="skill-category">
+                    <h4>Special technologies</h4>
+                    <div class="skill-item">
+                        <div class="skill-info">
+                            <span class="skill-name">LiveKit</span>
+                            <span class="skill-level">75% (1- year)</span>
+                        </div>
+                        <div class="skill-progress">
+                            <div class="skill-progress-bar" style="width: 75%"></div>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <div class="skill-info">
+                            <span class="skill-name">PartyKit</span>
+                            <span class="skill-level">75% (1- year)</span>
+                        </div>
+                        <div class="skill-progress">
+                            <div class="skill-progress-bar" style="width: 75%"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -815,19 +836,16 @@
                         <p class="job-location">6th October, Giza, Egypt</p>
                     </div>
                     <div>
-                        <p class="job-duration">Aug 2025 - Present</p>
-                        <p class="job-duration">- years</p>
+                        <p class="job-duration">Jul 2025 - Present</p>
                     </div>
                 </div>
                 <ul class="job-description">
-                    <li>Enhance payment services by refactoring the source code</li>
-                    <li>Add Redis to project to cache data for reducing load on database</li>
-                    <li>Enhance connectivity when using API</li>
-                    <li>Use FastAPI with asynchronous functions</li>
+                    <li>Enhance payment services (FastAPI, PostgreSQL, Redis)</li>
+                    <li>Create livestream service in Vconnect tool (NodeJS, MongoDB, LiveKit)</li>
                 </ul>
                 <div class="job-stats">
-                    <span><strong>Team Size:</strong> 8 developers</span>
-                    <span><strong>Projects Delivered:</strong> 1</span>
+                    <span><strong>Team Size:</strong> 12 developers</span>
+                    <span><strong>Projects Delivered:</strong> 2</span>
                     <span><strong>Experience Level:</strong> Junior (95%)</span>
                 </div>
             </div>
