Add Hykerz experience

--- a/cv-print.html
+++ b/cv-print.html
@@ -677,29 +677,7 @@
                      </div>
                  </div>
 
-                                 <div class="skill-category">
-                     <h4>Frontend Technologies</h4>
-                     <div class="skill-item">
-                         <div class="skill-info">
-                             <span class="skill-name">HTML5/CSS3/ES</span>
-                             <span class="skill-level">80% (2+ years)</span>
-                         </div>
-                         <div class="skill-progress">
-                             <div class="skill-progress-bar" style="width: 80%"></div>
-                         </div>
-                     </div>
-                     <div class="skill-item">
-                         <div class="skill-info">
-                             <span class="skill-name">Flutter</span>
-                             <span class="skill-level">75% (1- year)</span>
-                         </div>
-                         <div class="skill-progress">
-                             <div class="skill-progress-bar" style="width: 75%"></div>
-                         </div>
-                     </div>
-                 </div>
-
-                                 <div class="skill-category">
+                                <div class="skill-category">
                      <h4>Backend & APIs</h4>
                      <div class="skill-item">
                          <div class="skill-info">
@@ -744,6 +722,37 @@
                          </div>
                          <div class="skill-progress">
                              <div class="skill-progress-bar" style="width: 80%"></div>
+                         </div>
+                     </div>
+                     <div class="skill-item">
+                         <div class="skill-info">
+                             <span class="skill-name">Firebase</span>
+                             <span class="skill-level">70% (1- year)</span>
+                         </div>
+                         <div class="skill-progress">
+                             <div class="skill-progress-bar" style="width: 70%"></div>
+                         </div>
+                     </div>
+                 </div>
+
+                                 <div class="skill-category">
+                     <h4>Frontend Technologies</h4>
+                     <div class="skill-item">
+                         <div class="skill-info">
+                             <span class="skill-name">HTML5/CSS3/ES</span>
+                             <span class="skill-level">80% (2+ years)</span>
+                         </div>
+                         <div class="skill-progress">
+                             <div class="skill-progress-bar" style="width: 80%"></div>
+                         </div>
+                     </div>
+                     <div class="skill-item">
+                         <div class="skill-info">
+                             <span class="skill-name">Flutter</span>
+                             <span class="skill-level">75% (1- year)</span>
+                         </div>
+                         <div class="skill-progress">
+                             <div class="skill-progress-bar" style="width: 75%"></div>
                          </div>
                      </div>
                  </div>
@@ -831,12 +840,35 @@
             <div class="experience-item">
                 <div class="job-header">
                     <div>
+                        <h3 class="job-title">Backend developer</h3>
+                        <p class="job-company">Hykerz</p>
+                        <p class="job-location">Remote, Egypt</p>
+                    </div>
+                    <div>
+                        <p class="job-duration">Jul 2025 - Sep 2025</p>
+                        <p class="job-duration">3 months</p>
+                    </div>
+                </div>
+                <ul class="job-description">
+                    <li>Develop and maintain application in iOS and android (Flutter, Firebase)</li>
+                </ul>
+                <div class="job-stats">
+                    <span><strong>Team Size:</strong> 3 developers</span>
+                    <span><strong>Projects Delivered:</strong> 1</span>
+                    <span><strong>Experience Level:</strong> Junior (100%)</span>
+                </div>
+            </div>
+
+            <div class="experience-item">
+                <div class="job-header">
+                    <div>
                         <h3 class="job-title">Intern. Backend developer</h3>
                         <p class="job-company">Vconnect</p>
                         <p class="job-location">6th October, Giza, Egypt</p>
                     </div>
                     <div>
-                        <p class="job-duration">Jul 2025 - Present</p>
+                        <p class="job-duration">Jul 2025 - Sep 2025</p>
+                        <p class="job-duration">3 months</p>
                     </div>
                 </div>
                 <ul class="job-description">
