--- a/cv-print.html
+++ b/cv-print.html
@@ -842,7 +842,7 @@
                     <div>
                         <h3 class="job-title">Backend developer</h3>
                         <p class="job-company">Hykerz</p>
-                        <p class="job-location">Remote, Egypt</p>
+                        <p class="job-location">Remote part-time, Egypt</p>
                     </div>
                     <div>
                         <p class="job-duration">Jul 2025 - Sep 2025</p>
