--- a/cv-print.html
+++ b/cv-print.html
@@ -1062,7 +1062,7 @@
 
           <div class="project-item">
             <div class="project-header">
-              <h3 class="project-name">MMQ2u</h3>
+              <h3 class="project-name">MMQ4u</h3>
               <span class="project-status status-development">Development</span>
             </div>
             <p class="project-description">
@@ -1076,7 +1076,7 @@
             <div class="project-stats">
               <span
                 ><strong>GitHub:</strong>
-                <a href="https://github.com/MMQ4u/Django">github/MMQ2u</a></span
+                <a href="https://github.com/MMQ4u/Django">github/MMQ4u</a></span
               >
               <span><strong>Live Demo:</strong> -</span>
               <span><strong>Users:</strong> -</span>
@@ -1089,11 +1089,11 @@
 
           <div class="project-item">
             <div class="project-header">
-              <h3 class="project-name">MMQ2u - beta</h3>
+              <h3 class="project-name">MMQ4u - beta</h3>
               <span class="project-status status-production">Production</span>
             </div>
             <p class="project-description">
-              Beta version as static page from MMQ2u
+              Beta version as static page from MMQ4u
             </p>
             <p class="project-tech">
               <strong>Technologies:</strong> HTML/CSS/JS
@@ -1102,10 +1102,13 @@
               <span
                 ><strong>GitHub:</strong>
                 <a href="https://github.com/MMQ4u/MMQ4u.github.io"
-                  >MMQ2u</a
+                  >MMQ4u</a
                 ></span
               >
-              <span><strong>Live Demo:</strong> -</span>
+              <span
+                ><strong>Live Demo:</strong>
+                <a href="https://mmq4u.github.io/">MMQ4u</a></span
+              >
               <span><strong>Users:</strong> +7k</span>
               <span><strong>Duration:</strong> 3 months</span>
               <span><strong>Completion:</strong> 100%</span>
