Update CV with improved skill levels and profile image

--- a/cv-print.html
+++ b/cv-print.html
@@ -578,7 +578,7 @@
       <div class="header">
         <div class="profile-block">
           <img
-            src="https://media.licdn.com/dms/image/v2/D4D03AQHt8uDrQks9pg/profile-displayphoto-shrink_400_400/B4DZWTnI7MHkAg-/0/1741938268535?e=1760572800&v=beta&t=NR67lY1gDq2V6D7qyfqFHmmOmE_hDlbdHkafLjtJL3I"
+            src="https://media.licdn.com/dms/image/v2/D4D03AQHt8uDrQks9pg/profile-displayphoto-shrink_800_800/B4DZWTnI7MHkAc-/0/1741938268535?e=1763596800&v=beta&t=LMD678eA6nf0n8k_oRPdv3-SrnjWcJC-W0R3NjacR1o"
             alt="Youssef Hassan Ali"
             class="profile-img"
           />
@@ -783,6 +783,15 @@
             <div class="skill-item">
               <div class="skill-info">
                 <span class="skill-name">Flutter</span>
+                <span class="skill-level">90% (1- year)</span>
+              </div>
+              <div class="skill-progress">
+                <div class="skill-progress-bar" style="width: 90%"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <div class="skill-info">
+                <span class="skill-name">React</span>
                 <span class="skill-level">75% (1- year)</span>
               </div>
               <div class="skill-progress">
