--- a/cv-print.html
+++ b/cv-print.html
@@ -712,7 +712,7 @@
           </div>
 
           <div class="skill-category">
-            <h4>Backend & APIs</h4>
+            <h4>Backend Technologies</h4>
             <div class="skill-item">
               <div class="skill-info">
                 <span class="skill-name">Node.js</span>
@@ -733,20 +733,11 @@
             </div>
             <div class="skill-item">
               <div class="skill-info">
-                <span class="skill-name">RESTful APIs</span>
-                <span class="skill-level">95% (1- year)</span>
+                <span class="skill-name">NestJS</span>
+                <span class="skill-level">70% (1- year)</span>
               </div>
               <div class="skill-progress">
-                <div class="skill-progress-bar" style="width: 95%"></div>
-              </div>
-            </div>
-            <div class="skill-item">
-              <div class="skill-info">
-                <span class="skill-name">JWT</span>
-                <span class="skill-level">95% (1- year)</span>
-              </div>
-              <div class="skill-progress">
-                <div class="skill-progress-bar" style="width: 95%"></div>
+                <div class="skill-progress-bar" style="width: 70%"></div>
               </div>
             </div>
             <div class="skill-item">
@@ -809,6 +800,15 @@
               </div>
               <div class="skill-progress">
                 <div class="skill-progress-bar" style="width: 80%"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <div class="skill-info">
+                <span class="skill-name">MongoDB</span>
+                <span class="skill-level">40% (1- years)</span>
+              </div>
+              <div class="skill-progress">
+                <div class="skill-progress-bar" style="width: 40%"></div>
               </div>
             </div>
             <div class="skill-item">
