Update portfolio link to point to the new Vercel deployment

--- a/cv-print.html
+++ b/cv-print.html
@@ -626,7 +626,7 @@
             </div>
             <div class="contact-item">
               <strong>Portfolio:</strong>
-              <a href="https://joyoussefhassan.github.io/JOYoussefHassan"
+              <a href="https://joyoussefhassan.vercel.app"
                 >JOYoussefHassan</a
               >
             </div>
