Refactor code structure for improved readability and maintainability

--- a/Software - CV/Software - CV.html
+++ b/Software - CV/Software - CV.html
@@ -883,7 +883,7 @@
         <div class="experience-item">
           <div class="job-header">
             <div>
-              <h3 class="job-title">Backend developer</h3>
+              <h3 class="job-title">Full-stack developer</h3>
               <a class="job-company" href="https://www.facebook.com/hykerzegypt"
                 >Hykerz</a
               >
@@ -896,8 +896,7 @@
           </div>
           <ul class="job-description">
             <li>
-              Develop and maintain application in iOS and android (Flutter,
-              Firebase)
+              Develop some UI/UX designs for Hykerz application (Chat, Maps, )
             </li>
           </ul>
           <div class="job-stats">
