Refactor code structure for improved readability and maintainability

--- a/Software - CV/Software - CV.html
+++ b/Software - CV/Software - CV.html
@@ -136,33 +136,33 @@
       .skills-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 20px;
+        gap: 8px;
       }
 
       .skill-category {
-        margin-bottom: 15px;
+        margin-bottom: 8px;
       }
 
       .skill-category h4 {
         font-size: 13px;
         font-weight: 600;
         color: #1e293b;
-        margin-bottom: 8px;
+        margin-bottom: 6px;
       }
 
       .skill-item {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-bottom: 8px;
+        margin-bottom: 6px;
         font-size: 11px;
-        gap: 10px;
+        gap: 6px;
       }
 
       .skill-info {
         display: flex;
         align-items: center;
-        gap: 8px;
+        gap: 6px;
         min-width: 0;
         flex: 1;
       }
@@ -176,6 +176,7 @@
         color: #64748b;
         font-size: 10px;
         white-space: nowrap;
+        display: none !important;
       }
 
       .skill-progress {
@@ -185,6 +186,7 @@
         border-radius: 3px;
         overflow: hidden;
         flex-shrink: 0;
+        display: none !important;
       }
 
       .skill-progress-bar {
@@ -205,7 +207,7 @@
       }
 
       .skill-category {
-        margin-bottom: 15px;
+        margin-bottom: 6px;
         page-break-inside: avoid;
       }
 
@@ -477,33 +479,33 @@
         .skills-grid {
           display: grid;
           grid-template-columns: 1fr 1fr;
-          gap: 20px;
+          gap: 8px;
         }
 
         .skill-category {
-          margin-bottom: 15px;
+          margin-bottom: 8px;
         }
 
         .skill-category h4 {
           font-size: 13px;
           font-weight: 600;
           color: #1e293b;
-          margin-bottom: 8px;
+          margin-bottom: 6px;
         }
 
         .skill-item {
           display: flex;
           align-items: center;
           justify-content: space-between;
-          margin-bottom: 8px;
+          margin-bottom: 6px;
           font-size: 11px;
-          gap: 10px;
+          gap: 6px;
         }
 
         .skill-info {
           display: flex;
           align-items: center;
-          gap: 8px;
+          gap: 6px;
           min-width: 0;
           flex: 1;
         }
@@ -526,6 +528,7 @@
           border-radius: 3px;
           overflow: hidden;
           flex-shrink: 0;
+          display: none !important;
         }
 
         .skill-progress-bar {
@@ -578,7 +581,7 @@
       <div class="header">
         <div class="profile-block">
           <img
-            src="https://media.licdn.com/dms/image/v2/D4D03AQHt8uDrQks9pg/profile-displayphoto-shrink_800_800/B4DZWTnI7MHkAc-/0/1741938268535?e=1763596800&v=beta&t=LMD678eA6nf0n8k_oRPdv3-SrnjWcJC-W0R3NjacR1o"
+            src="./JO.jpg"
             alt="Youssef Hassan Ali"
             class="profile-img"
           />
@@ -638,10 +641,16 @@
       <div class="section">
         <h2 class="section-title">Professional Summary</h2>
         <p class="summary">
-          I currently work as a full-stack developer. I created many projects
-          using cross platforms in front-end field. Also, many projects in
-          backend using python and nodejs. I'm hiring to work as a software
-          developer.
+          Driven Full‑Stack Software Developer with hands‑on experience building
+          production web and cross‑platform applications using Python, Node.js
+          (Express, NestJS), Django, Flutter, React, and TypeScript. Skilled in
+          designing and integrating RESTful APIs, payment services, livestream
+          systems (LiveKit), and scalable data backends (PostgreSQL, MongoDB,
+          Redis). Proven track record delivering projects such as NeusHub and
+          MMQ4u, with strong DevOps practices (Docker, CI/CD) and a B.PharmD
+          background that brings disciplined problem‑solving and domain insight.
+          Seeking roles to drive end‑to‑end product development and improve
+          system reliability and performance.
         </p>
       </div>
 
@@ -883,7 +892,7 @@
         <div class="experience-item">
           <div class="job-header">
             <div>
-              <h3 class="job-title">Full-stack developer</h3>
+              <h3 class="job-title">Mobile & Backend Developer</h3>
               <a class="job-company" href="https://www.facebook.com/hykerzegypt"
                 >Hykerz</a
               >
@@ -896,7 +905,13 @@
           </div>
           <ul class="job-description">
             <li>
-              Develop some UI/UX designs for Hykerz application (Chat, Maps, )
+              Develop some chat design for Hykerz application (replying, deleting, send location, fetch messages, etc.) using Flutter
+            </li>
+            <li>
+              Create event backend service for Hykerz application (NodeJS, NestJS, MongoDB)
+            </li>
+            <li>
+              Fix some issues in Hykerz application and improve performance
             </li>
           </ul>
           <div class="job-stats">
